--- a/risk-lens-extension/popup.html
+++ b/risk-lens-extension/popup.html
@@ -116,6 +116,8 @@
     <div id="advancedView" style="display: none;">
       <p><strong>Reason:</strong> <span id="reason"></span></p>
       <p><strong>Error:</strong> <span id="error"></span></p>
+      <p><strong>Why flagged:</strong></p>
+      <ul id="explanations"></ul>
       <pre id="rawJson"></pre>
     </div>
   </div>
