--- a/risk-lens-extension/popup.html
+++ b/risk-lens-extension/popup.html
@@ -112,6 +112,7 @@
 
     <button id="refreshBtn">Refresh Score</button>
     <button id="toggleAdvanced">Show Advanced</button>
+    <button id="openOptions">Settings</button>
 
     <div id="advancedView" style="display: none;">
       <p><strong>Reason:</strong> <span id="reason"></span></p>
