--- a/risk-lens-extension/warning.html
+++ b/risk-lens-extension/warning.html
@@ -1,86 +1,137 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<style>
-body {
-  font-family: system-ui;
-  background: #0f172a;
-  color: white;
-  text-align: center;
-  padding: 20px;
-}
+  <meta charset="utf-8" />
+  <title>RiskLens Warning</title>
+  <style>
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: #0f172a;
+      color: #e2e8f0;
+      margin: 0;
+      padding: 24px;
+      display: flex;
+      justify-content: center;
+    }
 
-#card {
-  background: #1e293b;
-  border-radius: 12px;
-  padding: 20px;
-}
+    #card {
+      width: 720px;
+      max-width: 100%;
+      background: #1e293b;
+      border-radius: 14px;
+      padding: 20px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.45);
+    }
 
-.danger { color: #ef4444; }
-.sus { color: #facc15; }
+    h2 {
+      margin: 0 0 8px 0;
+      color: #ef4444;
+      font-size: 22px;
+    }
 
-button {
-  margin-top: 10px;
-  padding: 10px;
-  width: 100%;
-  border-radius: 6px;
-  border: none;
-  cursor: pointer;
-}
+    .muted {
+      opacity: 0.75;
+      font-size: 13px;
+      margin: 6px 0 0 0;
+      word-break: break-word;
+    }
 
-#safeBtn {
-  background: #22c55e;
-}
+    .row {
+      margin-top: 14px;
+      padding: 12px;
+      background: #0b1220;
+      border: 1px solid rgba(148,163,184,0.15);
+      border-radius: 12px;
+    }
 
-#continueBtn {
-  background: #334155;
-}
-</style>
+    .row strong { color: #fff; }
+
+    .btnRow {
+      display: flex;
+      gap: 10px;
+      margin-top: 14px;
+      flex-wrap: wrap;
+    }
+
+    button {
+      flex: 1;
+      min-width: 220px;
+      padding: 10px 12px;
+      border-radius: 10px;
+      border: 1px solid rgba(148,163,184,0.18);
+      cursor: pointer;
+      font-size: 14px;
+      color: #fff;
+      background: #334155;
+    }
+    button:hover { background: #475569; }
+
+    #back {
+      background: #22c55e;
+      border-color: rgba(34,197,94,0.35);
+      color: #0b1220;
+      font-weight: 700;
+    }
+    #back:hover { filter: brightness(1.05); }
+
+    #continue {
+      background: #ef4444;
+      border-color: rgba(239,68,68,0.35);
+      font-weight: 700;
+    }
+    #continue:hover { filter: brightness(1.05); }
+
+    .controls {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 12px;
+      flex-wrap: wrap;
+      margin-top: 14px;
+    }
+
+    label {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 13px;
+      opacity: 0.9;
+    }
+
+    input[type="checkbox"] { transform: scale(1.1); }
+
+    #optionsBtn {
+      flex: 0;
+      min-width: 160px;
+    }
+  </style>
 </head>
 
 <body>
   <div id="card">
-    <h2 class="danger">⚠️ Potential Phishing Site</h2>
+    <h2>⚠️ RiskLens blocked this page</h2>
 
-    <p id="summary"></p>
+    <div class="row">
+      <div><strong>Target:</strong> <span id="target"></span></div>
+      <div class="muted" id="details"></div>
+    </div>
 
-    <p id="score"></p>
+    <div class="controls">
+      <label>
+        <input id="disable" type="checkbox" />
+        Disable blocking (allow dangerous sites without warning)
+      </label>
 
-    <ul id="reasons"></ul>
+      <button id="optionsBtn">Open Settings</button>
+    </div>
 
-    <button id="safeBtn">Go Back to Safety</button>
-    <button id="continueBtn">Continue Anyway (Not Recommended)</button>
+    <div class="btnRow">
+      <button id="back">Go Back (Recommended)</button>
+      <button id="continue">Continue Anyway</button>
+    </div>
   </div>
 
-<script>
-const params = new URLSearchParams(location.search);
-
-const target = params.get("target");
-const score = Number(params.get("score"));
-const verdict = params.get("verdict");
-
-document.getElementById("summary").textContent =
-  verdict === "phishing"
-    ? "This site shows strong signs of phishing."
-    : "This site may be unsafe.";
-
-document.getElementById("score").textContent =
-  `Risk score: ${Math.round(score)}/100`;
-
-document.getElementById("safeBtn").onclick = () => {
-  history.back();
-};
-
-document.getElementById("continueBtn").onclick = () => {
-  browser.runtime.sendMessage({
-    type: "ALLOW_ONCE",
-    url: target
-  }).then(() => {
-    location.href = target;
-  });
-};
-</script>
-
+  <!-- IMPORTANT: external script (no inline JS) -->
+  <script src="warning.js"></script>
 </body>
 </html>
