--- a/risk-lens-extension/popup.html
+++ b/risk-lens-extension/popup.html
@@ -1,125 +1,336 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
   <meta charset="utf-8" />
+  <title>RiskLens</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+    :root {
+      --bg: #0b1220;
+      --card: #111827;
+      --border: rgba(148,163,184,.15);
+      --text: #e5e7eb;
+      --muted: rgba(226,232,240,.65);
+      --btn: #1f2937;
+
+      --ringTrack: rgba(148,163,184,.18);
+      --ringFill: #e5e7eb; /* keep minimalist: same as text */
+      --shadow: 0 14px 40px rgba(0,0,0,.45);
+    }
+
+    body.light-mode {
+      --bg: #ffffff;
+      --card: #f3f4f6;
+      --border: rgba(17,24,39,.12);
+      --text: #111827;
+      --muted: rgba(17,24,39,.60);
+      --btn: #e5e7eb;
+
+      --ringTrack: rgba(17,24,39,.12);
+      --ringFill: #111827;
+      --shadow: 0 14px 40px rgba(0,0,0,.12);
+    }
+
+    * { box-sizing: border-box; }
+
     body {
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      width: 270px;
-      padding: 12px;
       margin: 0;
-      background: #0f172a;
-      color: #e2e8f0;
+      width: 320px;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      padding: 12px;
+      transition: background-color 180ms ease, color 180ms ease;
     }
 
-    #card {
-      background: #1e293b;
-      border-radius: 12px;
-      padding: 14px;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+    .card, .icon-btn, .ring-track, .ring-fill, .sub, .status, .adv, .jsonBox, .detailsBtn {
+      transition: background-color 180ms ease, border-color 180ms ease, color 180ms ease, opacity 180ms ease;
     }
 
-    #scoreText {
-      font-size: 32px;
-      font-weight: bold;
-      margin-bottom: 6px;
-      transition: color 0.3s ease;
-    }
-
-    #labelText {
-      font-size: 14px;
-      opacity: 0.85;
-      margin-bottom: 8px;
-      transition: color 0.3s ease;
-    }
-
-    #barContainer {
-      width: 100%;
-      height: 6px;
-      background: #020617;
-      border-radius: 999px;
-      overflow: hidden;
+    .topbar {
+      display: flex;
+      gap: 8px;
       margin-bottom: 10px;
     }
 
-    #barFill {
-      height: 100%;
-      width: 0%;
-      border-radius: 999px;
-      transition: width 0.6s ease, background 0.3s ease;
-    }
-
-    #meta {
-      font-size: 11px;
-      opacity: 0.6;
-      margin-bottom: 8px;
-    }
-
-    .safe { color: #22c55e; }
-    .sus { color: #facc15; }
-    .danger { color: #ef4444; }
-
-    .safe-bg { background: #22c55e; }
-    .sus-bg { background: #facc15; }
-    .danger-bg { background: #ef4444; }
-
-    button {
-      width: 100%;
-      margin-top: 6px;
-      padding: 7px;
-      border-radius: 6px;
-      border: none;
+    .icon-btn {
+      width: 32px;
+      height: 32px;
+      border-radius: 8px;
+      border: 1px solid var(--border);
+      background: var(--btn);
+      display: grid;
+      place-items: center;
       cursor: pointer;
+      position: relative;
+      outline: none;
+    }
+
+    .icon-btn:hover { filter: brightness(1.08); }
+    .icon-btn:active { transform: translateY(1px); }
+
+    .icon-btn svg {
+      width: 16px;
+      height: 16px;
+      fill: var(--text);
+      transition: fill 180ms ease;
+    }
+
+    /* Custom tooltips */
+    .icon-btn[data-tip]::after {
+      content: attr(data-tip);
+      position: absolute;
+      left: 0;
+      top: 40px;
+      z-index: 999;
+      white-space: nowrap;
+
+      background: rgba(2,6,23,.92);
+      color: #e5e7eb;
+      border: 1px solid rgba(148,163,184,.18);
+      border-radius: 10px;
+      padding: 6px 8px;
       font-size: 12px;
-      background: #334155;
-      color: white;
+      line-height: 1.2;
+
+      opacity: 0;
+      transform: translateY(-4px);
+      pointer-events: none;
+      transition: opacity 130ms ease, transform 130ms ease;
+      box-shadow: 0 10px 30px rgba(0,0,0,.35);
     }
 
-    button:hover {
-      background: #475569;
+    body.light-mode .icon-btn[data-tip]::after {
+      background: rgba(255,255,255,.96);
+      color: #111827;
+      border-color: rgba(17,24,39,.12);
+      box-shadow: 0 10px 30px rgba(0,0,0,.12);
     }
 
-    #advancedView {
-      margin-top: 10px;
-      font-size: 11px;
-      text-align: left;
+    .icon-btn[data-tip]:hover::after,
+    .icon-btn[data-tip]:focus-visible::after {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      padding: 12px;
+      box-shadow: var(--shadow);
+    }
+
+    .ringWrap {
+      display: grid;
+      place-items: center;
+      padding: 10px 0 4px;
+    }
+
+    .ring {
+      width: 220px;
+      height: 220px;
+      position: relative;
+      display: grid;
+      place-items: center;
+    }
+
+    .ring svg {
+      width: 220px;
+      height: 220px;
+      transform: rotate(-90deg);
+    }
+
+    .ring-track { fill: none; stroke: var(--ringTrack); stroke-width: 10; }
+    .ring-fill  { fill: none; stroke: var(--ringFill);  stroke-width: 10; stroke-linecap: round; stroke-dasharray: 0 9999; }
+
+    .ringCenter {
+      position: absolute;
+      inset: 0;
+      display: grid;
+      place-items: center;
+      text-align: center;
+      padding: 16px;
+    }
+
+    .score {
+      font-size: 30px;
+      font-weight: 800;
+      letter-spacing: 0.2px;
+      line-height: 1.1;
+    }
+
+    .sub {
+      margin-top: 6px;
+      font-size: 12px;
+      color: var(--muted);
       word-break: break-word;
+      line-height: 1.2;
+      max-width: 170px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
-    pre {
-      background: #020617;
-      padding: 6px;
-      border-radius: 6px;
-      overflow-x: auto;
-      font-size: 10px;
+    .status {
+      margin-top: 10px;
+      font-size: 13px;
+      color: var(--muted);
+      text-align: center;
     }
+
+    /* --- Details link-style toggle (minimal) --- */
+    .detailsRow {
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+    }
+
+    .detailsBtn {
+      appearance: none;
+      border: none;
+      background: transparent;
+      padding: 0;
+      cursor: pointer;
+
+      font-size: 12px;
+      font-weight: 700;
+      color: var(--muted);
+
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .detailsBtn:hover { filter: brightness(1.08); }
+
+    .chev {
+      width: 14px;
+      height: 14px;
+      display: inline-block;
+      transform: rotate(0deg);
+      transition: transform 180ms ease;
+      color: var(--muted);
+    }
+
+    /* Rotate chevron when open */
+    .detailsBtn[aria-expanded="true"] .chev {
+      transform: rotate(180deg);
+    }
+
+    /* Advanced panel */
+    .adv {
+      margin-top: 10px;
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      background: rgba(2,6,23,.25);
+      overflow: hidden;
+
+      max-height: 0;
+      opacity: 0;
+      transition: max-height 220ms ease, opacity 180ms ease;
+    }
+    body.light-mode .adv { background: rgba(255,255,255,.50); }
+
+    .adv.open { max-height: 380px; opacity: 1; }
+
+    .advInner { padding: 10px; display: grid; gap: 8px; }
+
+    .kv {
+      font-size: 12px;
+      color: var(--muted);
+      display: flex;
+      justify-content: space-between;
+      gap: 10px;
+    }
+    .kv b { color: var(--text); font-weight: 700; }
+
+    .sectionTitle {
+      font-size: 12px;
+      font-weight: 800;
+      color: var(--text);
+      margin-top: 4px;
+    }
+
+    .reasons {
+      margin: 0;
+      padding-left: 16px;
+      color: var(--muted);
+      font-size: 12px;
+      line-height: 1.35;
+    }
+
+    .jsonBox {
+      background: rgba(2,6,23,.45);
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      padding: 8px;
+      color: var(--muted);
+      font-size: 11px;
+      overflow: auto;
+      max-height: 140px;
+      white-space: pre;
+    }
+    body.light-mode .jsonBox { background: rgba(17,24,39,.05); }
   </style>
 </head>
 
 <body>
+  <div class="topbar">
+    <button class="icon-btn" id="settingsBtn" aria-label="Open Settings" data-tip="Settings">
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M19.14,12.94a7.49,7.49,0,0,0,.05-1l2-1.55-2-3.46-2.35.47a7.41,7.41,0,0,0-.86-.5l-.35-2.38H8.37L8,6.89a7.41,7.41,0,0,0-.86.5L4.79,6.92l-2,3.46,2,1.55a7.49,7.49,0,0,0,.05,1l-2,1.55,2,3.46,2.35-.47a7.41,7.41,0,0,0,.86.5l.35,2.38h4.26l.35-2.38a7.41,7.41,0,0,0,.86-.5l2.35.47,2-3.46ZM12,15.5A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"/>
+      </svg>
+    </button>
 
-  <div id="card">
-    <div id="scoreText">--</div>
-    <div id="labelText">Loading...</div>
+    <button class="icon-btn" id="darkModeBtn" aria-label="Toggle Dark Mode" data-tip="Toggle theme">
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M12 2a9.93 9.93 0 0 0-3 19.45A9 9 0 1 1 12 2z"/>
+      </svg>
+    </button>
 
-    <!-- 🔥 Progress bar -->
-    <div id="barContainer">
-      <div id="barFill"></div>
+    <button class="icon-btn" id="siteBtn" aria-label="Open RiskLens Website" data-tip="Project website">
+      <svg viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M3.9 12a5 5 0 0 1 5-5h3v2h-3a3 3 0 1 0 0 6h3v2h-3a5 5 0 0 1-5-5zm6-1h4v2h-4v-2zm5.1-4h-3v2h3a3 3 0 1 1 0 6h-3v2h3a5 5 0 1 0 0-10z"/>
+      </svg>
+    </button>
+  </div>
+
+  <div class="card">
+    <div class="ringWrap">
+      <div class="ring" aria-label="Risk score">
+        <svg viewBox="0 0 220 220" role="img" aria-hidden="true">
+          <circle class="ring-track" cx="110" cy="110" r="90"></circle>
+          <circle class="ring-fill" id="ringFill" cx="110" cy="110" r="90"></circle>
+        </svg>
+
+        <div class="ringCenter">
+          <div class="score" id="score">--</div>
+          <div class="sub" id="host">Loading…</div>
+        </div>
+      </div>
     </div>
 
-    <div id="meta">--</div>
+    <div class="status" id="status">Loading…</div>
 
-    <button id="refreshBtn">Refresh Score</button>
-    <button id="toggleAdvanced">Show Advanced</button>
-    <button id="openOptions">Settings</button>
+    <!-- Details toggle (minimal) -->
+    <div class="detailsRow">
+      <button class="detailsBtn" id="advToggle" aria-label="Toggle details" aria-expanded="false">
+        Details
+        <span class="chev" aria-hidden="true">▾</span>
+      </button>
+    </div>
 
-    <div id="advancedView" style="display: none;">
-      <p><strong>Reason:</strong> <span id="reason"></span></p>
-      <p><strong>Error:</strong> <span id="error"></span></p>
-      <p><strong>Why flagged:</strong></p>
-      <ul id="explanations"></ul>
-      <pre id="rawJson"></pre>
+    <div class="adv" id="advPanel">
+      <div class="advInner">
+        <div class="kv"><span>Verdict</span> <b id="verdict">—</b></div>
+        <div class="kv"><span>Probability</span> <b id="prob">—</b></div>
+
+        <div class="sectionTitle">Why flagged</div>
+        <ul class="reasons" id="reasons"></ul>
+
+        <div class="sectionTitle">Raw response</div>
+        <div class="jsonBox" id="rawJson">{}</div>
+      </div>
     </div>
   </div>
 
