--- a/risk-lens-extension/popup.html
+++ b/risk-lens-extension/popup.html
@@ -5,276 +5,252 @@
   <title>RiskLens</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
+    /* ── Design tokens ── */
     :root {
       --bg: #0b1220;
       --card: #111827;
-      --border: rgba(148,163,184,.15);
+      --card2: rgba(2,6,23,.40);
+      --border: rgba(148,163,184,.14);
       --text: #e5e7eb;
-      --muted: rgba(226,232,240,.65);
+      --muted: rgba(226,232,240,.58);
       --btn: #1f2937;
 
-      --ringTrack: rgba(148,163,184,.18);
-      --ringFill: #e5e7eb; /* keep minimalist: same as text */
-      --shadow: 0 14px 40px rgba(0,0,0,.45);
+      /* Brand accent — matches safe.png green */
+      --green: #65CB00;
+      --greenDim: rgba(101,203,0,.15);
+      --amber: #F59E0B;
+      --amberDim: rgba(245,158,11,.15);
+      --red: #EF4444;
+      --redDim: rgba(239,68,68,.15);
+
+      --ringTrack: rgba(148,163,184,.12);
+      --ringFill: var(--green);
+      --shadow: 0 14px 40px rgba(0,0,0,.50);
     }
 
     body.light-mode {
-      --bg: #ffffff;
-      --card: #f3f4f6;
-      --border: rgba(17,24,39,.12);
+      --bg: #f8fafc;
+      --card: #ffffff;
+      --card2: rgba(0,0,0,.03);
+      --border: rgba(17,24,39,.10);
       --text: #111827;
-      --muted: rgba(17,24,39,.60);
+      --muted: rgba(17,24,39,.50);
       --btn: #e5e7eb;
-
-      --ringTrack: rgba(17,24,39,.12);
-      --ringFill: #111827;
-      --shadow: 0 14px 40px rgba(0,0,0,.12);
+      --ringTrack: rgba(17,24,39,.08);
+      --shadow: 0 14px 40px rgba(0,0,0,.08);
     }
 
-    * { box-sizing: border-box; }
+    * { box-sizing: border-box; margin: 0; }
 
     body {
-      margin: 0;
       width: 320px;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, sans-serif;
       background: var(--bg);
       color: var(--text);
       padding: 12px;
-      transition: background-color 180ms ease, color 180ms ease;
+      transition: background 180ms ease, color 180ms ease;
     }
 
-    .card, .icon-btn, .ring-track, .ring-fill, .sub, .status, .adv, .jsonBox, .detailsBtn {
-      transition: background-color 180ms ease, border-color 180ms ease, color 180ms ease, opacity 180ms ease;
-    }
-
-    .topbar {
-      display: flex;
-      gap: 8px;
-      margin-bottom: 10px;
-    }
+    /* ── Topbar ── */
+    .topbar { display: flex; gap: 6px; margin-bottom: 10px; }
 
     .icon-btn {
-      width: 32px;
-      height: 32px;
+      width: 32px; height: 32px;
       border-radius: 8px;
       border: 1px solid var(--border);
       background: var(--btn);
-      display: grid;
-      place-items: center;
-      cursor: pointer;
+      display: grid; place-items: center;
+      cursor: pointer; outline: none;
       position: relative;
-      outline: none;
+      transition: background 160ms ease, border-color 160ms ease;
     }
-
-    .icon-btn:hover { filter: brightness(1.08); }
+    .icon-btn:hover { filter: brightness(1.1); }
     .icon-btn:active { transform: translateY(1px); }
+    .icon-btn svg { width: 15px; height: 15px; fill: var(--text); transition: fill 160ms ease; }
 
-    .icon-btn svg {
-      width: 16px;
-      height: 16px;
-      fill: var(--text);
-      transition: fill 180ms ease;
-    }
-
-    /* Custom tooltips */
+    /* Tooltips */
     .icon-btn[data-tip]::after {
       content: attr(data-tip);
-      position: absolute;
-      left: 0;
-      top: 40px;
-      z-index: 999;
+      position: absolute; left: 0; top: 38px; z-index: 99;
       white-space: nowrap;
-
-      background: rgba(2,6,23,.92);
-      color: #e5e7eb;
-      border: 1px solid rgba(148,163,184,.18);
-      border-radius: 10px;
-      padding: 6px 8px;
-      font-size: 12px;
-      line-height: 1.2;
-
-      opacity: 0;
-      transform: translateY(-4px);
+      background: rgba(2,6,23,.94); color: #e5e7eb;
+      border: 1px solid rgba(148,163,184,.16);
+      border-radius: 8px; padding: 5px 8px;
+      font-size: 11px; line-height: 1;
+      opacity: 0; transform: translateY(-3px);
       pointer-events: none;
-      transition: opacity 130ms ease, transform 130ms ease;
-      box-shadow: 0 10px 30px rgba(0,0,0,.35);
+      transition: opacity 120ms ease, transform 120ms ease;
     }
-
     body.light-mode .icon-btn[data-tip]::after {
-      background: rgba(255,255,255,.96);
-      color: #111827;
-      border-color: rgba(17,24,39,.12);
-      box-shadow: 0 10px 30px rgba(0,0,0,.12);
+      background: #fff; color: #111827;
+      border-color: rgba(17,24,39,.10);
+      box-shadow: 0 4px 16px rgba(0,0,0,.10);
     }
-
     .icon-btn[data-tip]:hover::after,
     .icon-btn[data-tip]:focus-visible::after {
-      opacity: 1;
-      transform: translateY(0px);
+      opacity: 1; transform: translateY(0);
     }
 
+    /* ── Card ── */
     .card {
       background: var(--card);
-      border-radius: 12px;
+      border-radius: 14px;
       border: 1px solid var(--border);
-      padding: 12px;
       box-shadow: var(--shadow);
+      padding: 14px;
     }
 
-    .ringWrap {
-      display: grid;
-      place-items: center;
-      padding: 10px 0 4px;
-    }
+    /* ── Ring ── */
+    .ringWrap { display: grid; place-items: center; padding: 8px 0 2px; }
 
     .ring {
-      width: 220px;
-      height: 220px;
-      position: relative;
-      display: grid;
-      place-items: center;
+      width: 180px; height: 180px;
+      position: relative; display: grid; place-items: center;
     }
-
     .ring svg {
-      width: 220px;
-      height: 220px;
+      width: 180px; height: 180px;
       transform: rotate(-90deg);
     }
-
-    .ring-track { fill: none; stroke: var(--ringTrack); stroke-width: 10; }
-    .ring-fill  { fill: none; stroke: var(--ringFill);  stroke-width: 10; stroke-linecap: round; stroke-dasharray: 0 9999; }
+    .ring-track { fill: none; stroke: var(--ringTrack); stroke-width: 9; }
+    .ring-fill  {
+      fill: none; stroke: var(--ringFill); stroke-width: 9;
+      stroke-linecap: round; stroke-dasharray: 0 9999;
+      transition: stroke-dasharray 400ms cubic-bezier(.4,0,.2,1), stroke 300ms ease;
+    }
 
     .ringCenter {
-      position: absolute;
-      inset: 0;
-      display: grid;
-      place-items: center;
-      text-align: center;
-      padding: 16px;
+      position: absolute; inset: 0;
+      display: flex; flex-direction: column;
+      align-items: center; justify-content: center;
+      text-align: center; padding: 16px;
     }
-
     .score {
-      font-size: 30px;
-      font-weight: 800;
-      letter-spacing: 0.2px;
-      line-height: 1.1;
+      font-size: 38px; font-weight: 800;
+      letter-spacing: -0.5px; line-height: 1;
+    }
+    .host {
+      margin-top: 8px;
+      font-size: 11.5px; color: var(--muted);
+      word-break: break-all; line-height: 1.25;
+      max-width: 130px;
+      overflow: hidden; text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
-    .sub {
-      margin-top: 6px;
-      font-size: 12px;
+    /* ── Verdict badge ── */
+    .verdictRow { text-align: center; margin-top: 10px; }
+
+    .verdict-badge {
+      display: inline-flex; align-items: center; gap: 6px;
+      font-size: 11.5px; font-weight: 700;
+      letter-spacing: .6px; text-transform: uppercase;
+      padding: 5px 12px; border-radius: 20px;
+      border: 1px solid var(--border);
+      background: var(--card2);
       color: var(--muted);
-      word-break: break-word;
-      line-height: 1.2;
-      max-width: 170px;
-      margin-left: auto;
-      margin-right: auto;
+    }
+    .verdict-badge .dot {
+      width: 7px; height: 7px; border-radius: 50%;
+      background: var(--muted);
+      flex-shrink: 0;
     }
 
-    .status {
-      margin-top: 10px;
-      font-size: 13px;
-      color: var(--muted);
-      text-align: center;
-    }
+    /* Color states */
+    .verdict-badge.safe    { color: var(--green); border-color: rgba(101,203,0,.25); background: var(--greenDim); }
+    .verdict-badge.safe .dot { background: var(--green); }
 
-    /* --- Details link-style toggle (minimal) --- */
+    .verdict-badge.suspicious { color: var(--amber); border-color: rgba(245,158,11,.25); background: var(--amberDim); }
+    .verdict-badge.suspicious .dot { background: var(--amber); }
+
+    .verdict-badge.danger  { color: var(--red); border-color: rgba(239,68,68,.25); background: var(--redDim); }
+    .verdict-badge.danger .dot { background: var(--red); }
+
+    /* ── Details toggle ── */
     .detailsRow {
-      margin-top: 10px;
-      display: flex;
-      justify-content: center;
+      margin-top: 12px;
+      display: flex; justify-content: center;
     }
-
     .detailsBtn {
-      appearance: none;
-      border: none;
-      background: transparent;
-      padding: 0;
-      cursor: pointer;
-
-      font-size: 12px;
-      font-weight: 700;
+      appearance: none; border: none; background: transparent;
+      padding: 0; cursor: pointer;
+      font-size: 12px; font-weight: 600;
       color: var(--muted);
-
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
+      display: inline-flex; align-items: center; gap: 5px;
+      transition: color 160ms ease;
     }
-
-    .detailsBtn:hover { filter: brightness(1.08); }
-
+    .detailsBtn:hover { color: var(--text); }
     .chev {
-      width: 14px;
-      height: 14px;
-      display: inline-block;
-      transform: rotate(0deg);
-      transition: transform 180ms ease;
-      color: var(--muted);
+      display: inline-block; font-size: 13px;
+      transition: transform 200ms ease;
     }
+    .detailsBtn[aria-expanded="true"] .chev { transform: rotate(180deg); }
 
-    /* Rotate chevron when open */
-    .detailsBtn[aria-expanded="true"] .chev {
-      transform: rotate(180deg);
-    }
-
-    /* Advanced panel */
+    /* ── Details panel ── */
     .adv {
       margin-top: 10px;
       border: 1px solid var(--border);
       border-radius: 12px;
-      background: rgba(2,6,23,.25);
+      background: var(--card2);
       overflow: hidden;
-
-      max-height: 0;
-      opacity: 0;
-      transition: max-height 220ms ease, opacity 180ms ease;
+      max-height: 0; opacity: 0;
+      transition: max-height 250ms ease, opacity 200ms ease;
     }
-    body.light-mode .adv { background: rgba(255,255,255,.50); }
+    .adv.open { max-height: 500px; opacity: 1; }
 
-    .adv.open { max-height: 380px; opacity: 1; }
-
-    .advInner { padding: 10px; display: grid; gap: 8px; }
+    .advInner { padding: 12px; display: grid; gap: 10px; }
 
     .kv {
-      font-size: 12px;
-      color: var(--muted);
-      display: flex;
-      justify-content: space-between;
-      gap: 10px;
+      font-size: 12px; color: var(--muted);
+      display: flex; justify-content: space-between; gap: 8px;
     }
     .kv b { color: var(--text); font-weight: 700; }
 
     .sectionTitle {
-      font-size: 12px;
-      font-weight: 800;
-      color: var(--text);
-      margin-top: 4px;
+      font-size: 11px; font-weight: 700;
+      text-transform: uppercase; letter-spacing: .5px;
+      color: var(--muted); margin-top: 2px;
     }
 
     .reasons {
-      margin: 0;
-      padding-left: 16px;
-      color: var(--muted);
-      font-size: 12px;
-      line-height: 1.35;
+      margin: 0; padding-left: 16px;
+      color: var(--muted); font-size: 12px; line-height: 1.5;
+    }
+    .reasons li + li { margin-top: 2px; }
+
+    .noReasons {
+      font-size: 12px; color: var(--muted);
+      font-style: italic;
     }
 
     .jsonBox {
-      background: rgba(2,6,23,.45);
+      background: rgba(0,0,0,.25);
       border: 1px solid var(--border);
       border-radius: 10px;
       padding: 8px;
       color: var(--muted);
-      font-size: 11px;
-      overflow: auto;
-      max-height: 140px;
-      white-space: pre;
+      font-family: "SF Mono", "Menlo", "Consolas", monospace;
+      font-size: 10.5px;
+      overflow: auto; max-height: 140px;
+      white-space: pre; line-height: 1.4;
     }
-    body.light-mode .jsonBox { background: rgba(17,24,39,.05); }
+    body.light-mode .jsonBox { background: rgba(0,0,0,.03); }
+
+    /* ── Loading / error states ── */
+    .loading-text {
+      font-size: 12px; color: var(--muted);
+      text-align: center; padding: 6px 0;
+    }
+
+    @keyframes pulse {
+      0%, 100% { opacity: .4; }
+      50% { opacity: 1; }
+    }
+    .loading-text.anim { animation: pulse 1.4s ease-in-out infinite; }
   </style>
 </head>
 
 <body>
+  <!-- Topbar -->
   <div class="topbar">
     <button class="icon-btn" id="settingsBtn" aria-label="Open Settings" data-tip="Settings">
       <svg viewBox="0 0 24 24" aria-hidden="true">
@@ -282,37 +258,44 @@
       </svg>
     </button>
 
-    <button class="icon-btn" id="darkModeBtn" aria-label="Toggle Dark Mode" data-tip="Toggle theme">
+    <button class="icon-btn" id="darkModeBtn" aria-label="Toggle theme" data-tip="Toggle theme">
       <svg viewBox="0 0 24 24" aria-hidden="true">
         <path d="M12 2a9.93 9.93 0 0 0-3 19.45A9 9 0 1 1 12 2z"/>
       </svg>
     </button>
 
-    <button class="icon-btn" id="siteBtn" aria-label="Open RiskLens Website" data-tip="Project website">
+    <button class="icon-btn" id="siteBtn" aria-label="Project website" data-tip="Project website">
       <svg viewBox="0 0 24 24" aria-hidden="true">
         <path d="M3.9 12a5 5 0 0 1 5-5h3v2h-3a3 3 0 1 0 0 6h3v2h-3a5 5 0 0 1-5-5zm6-1h4v2h-4v-2zm5.1-4h-3v2h3a3 3 0 1 1 0 6h-3v2h3a5 5 0 1 0 0-10z"/>
       </svg>
     </button>
   </div>
 
+  <!-- Main card -->
   <div class="card">
+    <!-- Ring gauge -->
     <div class="ringWrap">
       <div class="ring" aria-label="Risk score">
-        <svg viewBox="0 0 220 220" role="img" aria-hidden="true">
-          <circle class="ring-track" cx="110" cy="110" r="90"></circle>
-          <circle class="ring-fill" id="ringFill" cx="110" cy="110" r="90"></circle>
+        <svg viewBox="0 0 180 180" role="img" aria-hidden="true">
+          <circle class="ring-track" cx="90" cy="90" r="72"></circle>
+          <circle class="ring-fill" id="ringFill" cx="90" cy="90" r="72"></circle>
         </svg>
-
         <div class="ringCenter">
           <div class="score" id="score">--</div>
-          <div class="sub" id="host">Loading…</div>
+          <div class="host" id="host" title="">Loading…</div>
         </div>
       </div>
     </div>
 
-    <div class="status" id="status">Loading…</div>
+    <!-- Verdict badge -->
+    <div class="verdictRow">
+      <span class="verdict-badge" id="verdictBadge">
+        <span class="dot"></span>
+        <span id="verdictLabel">Scanning…</span>
+      </span>
+    </div>
 
-    <!-- Details toggle (minimal) -->
+    <!-- Details toggle -->
     <div class="detailsRow">
       <button class="detailsBtn" id="advToggle" aria-label="Toggle details" aria-expanded="false">
         Details
@@ -320,15 +303,17 @@
       </button>
     </div>
 
+    <!-- Details panel -->
     <div class="adv" id="advPanel">
       <div class="advInner">
         <div class="kv"><span>Verdict</span> <b id="verdict">—</b></div>
-        <div class="kv"><span>Probability</span> <b id="prob">—</b></div>
+        <div class="kv"><span>Phish probability</span> <b id="prob">—</b></div>
+        <div class="kv"><span>Risk score</span> <b id="scoreDetail">—</b></div>
 
         <div class="sectionTitle">Why flagged</div>
         <ul class="reasons" id="reasons"></ul>
 
-        <div class="sectionTitle">Raw response</div>
+        <div class="sectionTitle">Raw API response</div>
         <div class="jsonBox" id="rawJson">{}</div>
       </div>
     </div>
